website/static/website/style.css
.navbar {
    border-radius: 0;
}

.navbar-default .navbar-nav li a,
.navbar-default .navbar-brand {
    color: #707070;
}

html, body {
    height: 100%;
}

body {
    display: flex;
    flex-flow: column;
}

.footer {
    margin-top: auto;
    width: 100%;
    line-height: 1em;
    padding: 0.5em;
    background-color: #f5f5f5;
}

.footer .text-muted {
    margin-bottom: 0;
    color: #707070;
}

.top-buffer {
    margin-top: 20px;
}

.cookiebanner {
    margin-bottom: 0;
}

/* try to disable links if they are disabled */
.disabled {
    pointer-events: none;
}

/* for dragging modal dialogs */
.modal.fade.ui-draggable-dragging {
    -moz-transition: none;
    -o-transition: none;
    -webkit-transition: none;
    transition: none;
}

.modal-draggable .modal-header:hover {
    cursor: move;
}

.modal-draggable .modal-backdrop {
    position: fixed;
}

.modal-draggable {
    overflow: hidden ! important;
}

/* for the profile photo cropper */
.cropper-container {
    max-width: 100%;
}

.profile-dropdown .dropdown-toggle {
    padding-top: 6px;
    padding-bottom: 6px;
}

.profile-dropdown .img-responsive {
    display: inline;
}

/* fix checkboxes so labels are next to them */
input[type="checkbox"] {
    display: inline-block;
    width: auto;
    height: auto;
}

/* allow scrolling modals to scale properly */
.modal-scrollable .modal-body {
    overflow-y: auto;
}

/* if not xs/sm, limit the body height to 80% viewport */
@media (min-width:992px) {
    .modal-scrollable .modal-body {
        max-height: 80vh;
    }
}

.ui-menu-item-wrapper:hover {
    background: #337ab7;
    color: #fff;
}

